--- a/config/locales/crowdin/es-ES.yml
+++ b/config/locales/crowdin/es-ES.yml
@@ -53,7 +53,7 @@ es:
     rebuild_positions: "Reconstruir posiciones"
     remaining_hours: "Horas restantes"
     remaining_hours_ideal: "Horas restantes (ideal)"
-    show_burndown_chart: "Diagrama de Quemado"
+    show_burndown_chart: "Burndown Chart"
     story: "Historia"
     story_points: "Puntos de Historia"
     story_points_ideal: "Puntos de la historia (ideal)"
@@ -142,3 +142,4 @@ es:
   version_settings_display_option_left: "izquierda"
   version_settings_display_option_none: "ninguno"
   version_settings_display_option_right: "derecha"
+  label_remaining: "restantes"
