do language related changes

--- a/config/locales/crowdin/es-ES.yml
+++ b/config/locales/crowdin/es-ES.yml
@@ -142,3 +142,4 @@ es:
   version_settings_display_option_left: "izquierda"
   version_settings_display_option_none: "ninguno"
   version_settings_display_option_right: "derecha"
+  label_remaining: "restantes"
