language related change

--- a/config/locales/crowdin/es-ES.yml
+++ b/config/locales/crowdin/es-ES.yml
@@ -92,8 +92,9 @@ es:
   ideal: "ideal"
   inclusion: "no está incluido en la lista"
   label_back_to_project: "Volver a la página de proyecto"
-  label_backlog: "Backlog"
+  label_backlog: "Reserva"
   label_backlogs: "Backlogs"
+  label_kanban_board: "Tablero Kanban"
   label_backlogs_unconfigured: "Todavía no ha configurado backlogs. Por favor, visite %{administration} > %{plugins}, luego haga clic en el enlace de %{configure} para este plugin. Cuando haya establecido los campos, vuelva a esta página para empezar a usar la herramienta."
   label_blocks_ids: "ID de los paquetes de trabajo bloqueados"
   label_burndown: "Burndown"
