--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -141,6 +141,7 @@ en:
   label_back_to_project: "Back to project page"
   label_backlog: "Backlog"
   label_backlogs: "Backlogs"
+  label_kanban_board: "Kanban Board"
   label_backlogs_unconfigured: "You have not configured Backlogs yet. Please go to %{administration} > %{plugins}, then click on the %{configure} link for this plugin. Once you have set the fields, come back to this page to start using the tool."
   label_blocks_ids: "IDs of blocked work packages"
   label_burndown: "Burndown"
